scrollbar fixes for IE and Firefox browser

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,23 @@ a:hover, a:focus, a:active{
 	background: linear-gradient(#1D2934, #BE2525);
 	border-radius: 6px;
 }
+::-ms-scrollbar{
+		width: 5px;
+}
+
+::-ms-scrollbar-thumb{
+	background: linear-gradient(#1D2934, #BE2525);
+	border-radius: 6px;
+}
+
+::-moz-scrollbar{
+		width: 5px;
+}
+
+::-moz-scrollbar-thumb{
+	background: linear-gradient(#1D2934, #BE2525);
+	border-radius: 6px;
+}
 
 
 
